name:               sam
version:            0.1.0
description:        Find structure in text documents
License:            Apache-2.0
License-file:       LICENSE
homepage:           https://github.com/klangner/sam
author:             Krzysztof Langner
maintainer:         klangner@gmail.com
category:           Text, Information Retrieval, Natural Language Processing
build-type:         Simple
extra-source-files:
                    CHANGES
cabal-version:      >=1.10

source-repository head
  type:     git
  location: https://github.com/klangner/sam

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
                    base >= 4 && <5

  exposed-modules:  Text.Sam

test-suite unit-tests
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  default-language: Haskell2010
  build-depends:
                    base >= 4 && <5,
                    Cabal >=1.16.0 && <2,
                    hspec >=2 && <3,
                    QuickCheck >=2.6 && <3
  other-modules:
                    Text.Sam.Parser
  hs-source-dirs:
                    src,
                    test-src
